compiler/testData/diagnostics/tests/regressions/OrphanStarProjection.kt
// FIR_IDENTICAL
class B {}

konst b : B<!WRONG_NUMBER_OF_TYPE_ARGUMENTS!><*><!> = 1
